@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.41 2005/04/27 17:44:58 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/generic_stage_target.py,v 1.42 2005/04/27 21:31:05 rocket Exp $
 
 """
 This class does all of the chroot setup, copying of files, etc. It is
@@ -507,8 +507,9 @@ class generic_stage_target(generic_target):
 	    # copy over the portage overlays
 	    # Always copy over the overlay incase it has changed
 	    if self.settings.has_key("portage_overlay"):
+	    	print self.settings["portage_overlay"]
 	    	if type(self.settings["portage_overlay"])==types.StringType:
-			self.settings[self.settings["portage_overlay"]]=[self.settings["portage_overlay"]]
+			self.settings["portage_overlay"]=[self.settings["portage_overlay"]]
 		
 		for x in self.settings["portage_overlay"]: 
 			if os.path.exists(x):
